--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -54,6 +54,7 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Estimate job run time](./estimate-job-run-time)
 * [Minimize job run time](./minimize-time)
 * [Maximum execution time](./max-execution-time)
+* [Job limits](./job-limits)
 
 ### QPU and platform information
 * [Processor types](./processor-types)
