--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -69,3 +69,12 @@ When a job is failed or canceled, the reported usage is as follows:
 The interactive time to live (ITTL) in batch mode is one second for all instances.
 
 The ITTL for a session on the Open Plan instance is one second. For Premium Plan users, the ITTL is 60 seconds, unless there is an instance-specific configuration that dictates a different ITTL.
+
+
+| Execution mode | Instance type (Open or Premium Plan) | ITTL |
+| --- | --- | --- |
+| Batch mode | all instances (both Open and Premium Plan) | 1 sec |
+| Session mode | Open Plan | 1 sec |
+| Session mode | Premium Plan | 60 sec* |
+
+*\* Certain Premium Plan instances might be specially configured to have a different ITTL.*
