--- a/docs/guides/measure-qubits.mdx
+++ b/docs/guides/measure-qubits.mdx
@@ -5,7 +5,7 @@ description: Learn how to measure qubits, including constraints on where measure
 
 # Measure qubits
 
-To get information about a qubit's state, you have to _measure_ it onto a [classical bit](/api/qiskit/circuit#qiskit.circuit.Clbit).  This is an irreversible operation, and usually destroys entanglement and phase coherence between the target qubit and the rest of the system. Thus, after a qubit is measured, you can't perform any more instructions on that qubit, and each qubit can only be measured once. Additionally, there must be at least one classical register to store the measurement information.
+To get information about a qubit's state, you can _measure_ it onto a [classical bit](/api/qiskit/circuit#qiskit.circuit.Clbit). In Qiskit, measurements are performed in the computational basis, i.e., the single-qubit Pauli-$Z$ basis. A measurement will thus yield 0 or 1 depending on the overlap with the Pauli-$Z$ eigenstates $|0\rangle$ and $|1\rangle$.
 
 ## Apply a measurement to a circuit
 
@@ -44,7 +44,7 @@ from qiskit import QuantumCircuit
 
 qc = QuantumCircuit(3, 1)
 qc.x([0, 2])
-qc.measure_all # Measure all qubits.
+qc.measure_all() # Measure all qubits.
 ```
 
 ******************************************************
@@ -61,25 +61,13 @@ from qiskit import QuantumCircuit
 
 qc = QuantumCircuit(3, 1)
 qc.x([0, 2])
-qc.measure_active # Measure qubits that are not idle.
+qc.measure_active() # Measure qubits that are not idle.
 ```
 
-### Measure a circuit when it's created
-
-You can add measurements when generating a random circuit. Each qubit is measured, as shown in the following example.  For more information, see the [`random_circuit`](/api/qiskit/circuit#random_circuit) method documentation.
-
-Example:
-
-```python
-from qiskit.circuit.random import random_circuit
-
-circ = random_circuit(2, 2, measure=True)
-circ.draw(output='mpl')
-```
 
 <Admonition type="attention" title="Important notes">
 
-* Qubit measurement must be the last instruction on a qubit.  That is, no instructions can come after a measurement on that qubit (unless it's a dynamic circuit).
+* Circuits that contain operations _after_ a measurement are called dynamic circuits. Note, that not all backends or simulators might support these.
 * Each qubit can be measured only once.
 * There must be at least one classical register in order to use measurements.
 * The Sampler primitive requires circuit measurements. You can add circuit measurements with the Estimator primitive, but they are ignored.
