--- a/docs/guides/measure-qubits.mdx
+++ b/docs/guides/measure-qubits.mdx
@@ -5,15 +5,22 @@ description: Learn how to measure qubits, including constraints on where measure
 
 # Measure qubits
 
-To get information about a qubit's state, you can _measure_ it onto a [classical bit](/api/qiskit/circuit#qiskit.circuit.Clbit). In Qiskit, measurements are performed in the computational basis, i.e., the single-qubit Pauli-$Z$ basis. A measurement will thus yield 0 or 1 depending on the overlap with the Pauli-$Z$ eigenstates $|0\rangle$ and $|1\rangle$.
+To get information about a qubit's state, you can _measure_ it onto a [classical bit](/api/qiskit/circuit#qiskit.circuit.Clbit). In Qiskit, measurements are performed in the computational basis, that is, the single-qubit Pauli-$Z$ basis. A measurement will thus yield 0 or 1, depending on the overlap with the Pauli-$Z$ eigenstates $|0\rangle$ and $|1\rangle$:
+
+$$
+|q\rangle \xrightarrow{measure}\begin{cases}
+      |0\rangle (\text{outcome}+1), \text{with probability } p_0=|\langle q|0\rangle|^{2}\text{,} \\
+      |1\rangle (\text{outcome}-1), \text{with probability } p_1=|\langle q|1\rangle|^{2}\text{.}
+    \end{cases}
+$$
 
 ## Apply a measurement to a circuit
 
 There are several ways to apply measurement to a circuit:
 
-### `Measure` class
+### `QuantumCircuit.measure` method
 
-The Qiskit [Measure](/api/qiskit/circuit#qiskit.circuit.Measure) class measures the specified qubits.
+Use the [`measure`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure) method to measure a [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class).
 
 Examples:
 
@@ -35,6 +42,17 @@ qc.x([0, 2])
 qc.measure(1, 0)    # Measure qubit 1 into the classical bit 0.
 ```
 
+### `Measure` class
+
+The Qiskit [Measure](/api/qiskit/circuit#qiskit.circuit.Measure) class measures the specified qubits.
+
+```python
+from qiskit.circuit import Measure
+
+....
+qc.append(Measure(), [0], [0])  # measure qubit 0 into clbit 0
+```
+
 ### `measure_all` method
 
 To measure all qubits into the corresponding classical bits, use the [`measure_all`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure_all) method. By default, this method adds new classical bits in a `ClassicalRegister` to store these measurements.
@@ -46,11 +64,6 @@ qc = QuantumCircuit(3, 1)
 qc.x([0, 2])
 qc.measure_all() # Measure all qubits.
 ```
-
-******************************************************
-QUESTION:
-**WHEN I RUN THE ABOVE CODE AND ADD qc.draw("mpl"), IT DOESN'T LOOK LIKE ANY MEASUREMENTS ARE ACTUALLY ADDED, BUT IF I USE qc.measure(1, 0) INSTEAD, I SEE A MEASUREMENT. WHAT IS HAPPENING?**
-*******************************************************
 
 ### `measure_active` method
 
@@ -68,7 +81,7 @@ qc.measure_active() # Measure qubits that are not idle.
 <Admonition type="attention" title="Important notes">
 
 * Circuits that contain operations _after_ a measurement are called dynamic circuits. Note, that not all backends or simulators might support these.
-* Each qubit can be measured only once.
+* Each qubit can be measured only once, except when using dynamic circuits.
 * There must be at least one classical register in order to use measurements.
 * The Sampler primitive requires circuit measurements. You can add circuit measurements with the Estimator primitive, but they are ignored.
 
