point to programmatically finding ITTL

--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -78,3 +78,5 @@ The ITTL for a session on the Open Plan instance is one second. For Premium Plan
 | Session mode | Premium Plan | 60 sec* |
 
 *\* Certain Premium Plan instances might be specially configured to have a different ITTL.*
+
+Note that you can also programmatically query the ITTL; see details on the [Maximum execution time](/guides/max-execution-time#session-maximum-execution-time) page.
