--- a/docs/guides/measure-qubits.mdx
+++ b/docs/guides/measure-qubits.mdx
@@ -9,8 +9,8 @@ To get information about a qubit's state, you can _measure_ it onto a [classical
 
 $$
 |q\rangle \xrightarrow{measure}\begin{cases}
-      |0\rangle (\text{outcome}+1), \text{with probability } p_0=|\langle q|0\rangle|^{2}\text{,} \\
-      |1\rangle (\text{outcome}-1), \text{with probability } p_1=|\langle q|1\rangle|^{2}\text{.}
+      0 (\text{outcome}+1), \text{with probability } p_0=|\langle q|0\rangle|^{2}\text{,} \\
+      1 (\text{outcome}-1), \text{with probability } p_1=|\langle q|1\rangle|^{2}\text{.}
     \end{cases}
 $$
 
@@ -18,7 +18,7 @@ $$
 
 There are several ways to apply measurement to a circuit:
 
-### `QuantumCircuit.measure` method
+### `measure` method
 
 Use the [`measure`](/api/qiskit/qiskit.circuit.QuantumCircuit#measure) method to measure a [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class).
 
@@ -74,7 +74,7 @@ from qiskit import QuantumCircuit
 
 qc = QuantumCircuit(3, 1)
 qc.x([0, 2])
-qc.measure_active() # Measure qubits that are not idle.
+qc.measure_active() # Measure qubits that are not idle, i.e., qubits 0 and 2.
 ```
 
 
