--- a/docs/guides/bit-ordering.mdx
+++ b/docs/guides/bit-ordering.mdx
@@ -58,7 +58,7 @@ with bit $0$ being `0`, and bit $1$ being `1`. This is interpreted as the
 decimal integer `2` (measured with probability `1.0`).
 
 ```python
-from qiskit.primitives import Samplerv2 as Sampler
+from qiskit.primitives import SamplerV2 as Sampler
 qc.measure_all()
 
 job = sampler.run([qc])
