--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -32,7 +32,7 @@ class. When you start a batch,  you must specify a QPU by passing a `backend` ob
 **Batch class**
 
 ``` python
-from qiskit_ibm_runtime import Batch, Samplerv2 as Sampler, Estimatorv2 as Estimator
+from qiskit_ibm_runtime import Batch, SamplerV2 as Sampler, EstimatorV2 as Estimator
 
 backend = service.least_busy(operational=True, simulator=False)
 batch = Batch(backend=backend)
@@ -47,7 +47,7 @@ batch.close()
 The context manager automatically opens and closes the batch.
 
 ``` python
-from qiskit_ibm_runtime import Batch, Samplerv2 as Sampler, Estimatorv2 as Estimator
+from qiskit_ibm_runtime import Batch, SamplerV2 as Sampler, EstimatorV2 as Estimator
 
 backend = service.least_busy(operational=True, simulator=False)
 with Batch(backend=backend):
