--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -12,7 +12,7 @@ description: How to find answers to questions or problems you encounter while us
 | --- | --- |
 | IBM Quantum&trade; Network members  | Reach out to IBM Quantum Support if you have technical difficulties, questions, or concerns. Ask your administrator or IBM&reg; representative for IBM Quantum Support contact information. |
 | Pay-As-You-Go users  | Open a case in the IBM Cloud&reg; Support Center by filling out [this form](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field. |
-| Open Plan users | Access the [Qiskit Slack](https://qisk.it/join-slack) community, where you will find topical channels such as `qiskit-runtime`, `ibm-quantum-platform`, `qiskit-transpiler`, `qiskit-ecosystem`, and more.  |
+| Open Plan users | Access the [Qiskit Slack](https://qisk.it/join-slack) community, where you will find topical channels such as `#qiskit-runtime`, `#ibm-quantum-platform`, `#qiskit-transpiler`, `#qiskit-ecosystem`, and more.  |
 
 ### Discuss and ask questions
 
