--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -6,7 +6,7 @@ description: How to find answers to questions or problems you encounter while us
 
 # Support
 
-### Get help with Qiskit and IBM Quantum Platform
+## Get help with Qiskit and IBM Quantum Platform
 
 | | |
 | --- | --- |
@@ -14,7 +14,7 @@ description: How to find answers to questions or problems you encounter while us
 | Pay-As-You-Go users  | Open a case in the IBM Cloud&reg; Support Center by filling out [this form](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field. |
 | Open Plan users | Access the [Qiskit Slack](https://qisk.it/join-slack) community, where you will find topical channels such as `#qiskit-runtime`, `#ibm-quantum-platform`, `#qiskit-transpiler`, `#qiskit-ecosystem`, and more.  |
 
-### Discuss and ask questions
+## Discuss and ask questions
 
 | | |
 | --- | --- |
