--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -1,111 +1,43 @@
 ---
-title: Getting help
+title: Support
 description: How to find answers to questions or problems you encounter while using IBM Quantum (Platform, or on IBM Cloud) or Qiskit Runtime
 
 ---
 
-# Getting help
+# Support
 
-## IBM Quantum Support
+## Get help with Qiskit and IBM Quantum Platform
 
-Members of the IBM Quantum&trade; Network can reach out to IBM Quantum Support if they have technical difficulties, questions, or concerns. Ask your administrator or IBM&reg; representative for IBM Quantum Support contact information.
+| | |
+| --- | --- |
+| IBM Quantum&trade; Network members  | Reach out to IBM Quantum Support if you have technical difficulties, questions, or concerns. Ask your administrator or IBM&reg; representative for IBM Quantum Support contact information. |
+| Pay-As-You-Go users  | Open a case in the IBM Cloud&reg; Support Center by filling out [this form](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field. |
+| Open Plan users | Access the [Qiskit Slack](https://qisk.it/join-slack) community, where you will find topical channels such as `#qiskit-runtime`, `#ibm-quantum-platform`, `#qiskit-transpiler`, `#qiskit-ecosystem`, and more.  |
 
-Pay-As-You-Go users can open a case in the IBM Cloud&reg; Support Center by following [this link](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field.
+## Discuss and ask questions
 
-## Qiskit
-
-For help with Qiskit, access our Slack community: [Qiskit Slack](https://qisk.it/join-slack).
-
-## Qiskit Runtime
-
-- Join the qiskit-runtime channel within the [Qiskit Slack workspace](https://qisk.it/join-slack).
-
-## Open-source governance
-
-The following pages are resources for anyone interested in contributing code to Qiskit.
-
-- [Code of conduct](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md)
-- [Contributing guide](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md)
-- [Deprecation policy](https://github.com/Qiskit/qiskit/blob/main/DEPRECATION.md)
-- [Maintainers guide](https://github.com/Qiskit/qiskit/blob/main/MAINTAINING.md)
-
-## Other discussions
-
-Discuss quantum information science and development with the larger quantum computing field on the [Quantum Computing Stack Exchange](https://quantumcomputing.stackexchange.com/questions/) site. Be sure to read the ["How do I ask a good question?"](https://quantumcomputing.stackexchange.com/help/how-to-ask) guide, and make use of tags such as `qiskit`, `ibm-runtime`, and `ibm-quantum-services` for best results.
-
-For questions specific to programming, visit [Stack Overflow](https://stackoverflow.com/) and use the tag `qiskit`.
+| | |
+| --- | --- |
+| Discussions on quantum information science and development with the larger quantum computing field | Visit [Quantum Computing Stack Exchange](https://quantumcomputing.stackexchange.com/questions/) site. Be sure to read the ["How do I ask a good question?"](https://quantumcomputing.stackexchange.com/help/how-to-ask) guide, and make use of tags such as `qiskit`, `ibm-runtime`, and `ibm-quantum-services` for best results.|
+| Questions specific to programming |Visit [Stack Overflow](https://stackoverflow.com/) and use the tag `qiskit`.|
 
 ## Frequently asked questions
 
-<details>
-  <summary>
-    How do I cite Qiskit in my research?
-  </summary>
+- [General FAQs](/faq)
+- [Qiskit Runtime execution mode FAQs](/guides/execution-modes-faq)
 
-Cite Qiskit by using the included [BibTeX file](https://github.com/Qiskit/qiskit/blob/main/CITATION.bib).
-</details>
+## Open-source governance
 
-<details>
-  <summary>
-    How do I cite an IBM Quantum computer in my research?
-  </summary>
+See the [Open-source resources](/open-source/) for details on contributing code to Qiskit. Information there includes the [code of conduct](/open-source/code-of-conduct), PDF license agreements for [individual](https://docs.quantum.ibm.com/open-source/qiskit-cla.pdf) and [corporate](https://docs.quantum.ibm.com/open-source/qiskit-corporate-cla.pdf) contributors, [version strategy](/open-source/qiskit-sdk-version-strategy), and the [contributor](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) and [maintainer](https://github.com/Qiskit/qiskit/blob/main/MAINTAINING.md) guides.
 
-For research papers, we encourage authors to acknowledge IBM Quantum using:
+To report bugs, make feature requests, and see what's coming in future releases, visit the individual GitHub repositories:
 
->    We acknowledge the use of IBM Quantum services for this work. The views expressed are those of the authors, and do not reflect the official policy or position of IBM or the IBM Quantum team.
+[Qiskit SDK](https://github.com/Qiskit/qiskit)
 
-Paper references should be cited as follows:
+[Qiskit Runtime](https://github.com/Qiskit/qiskit-ibm-runtime)
 
-> IBM Quantum. https://<span>quantum.ibm.com</span>/, 2021
+[Qiskit Serverless](https://github.com/Qiskit/qiskit-serverless)
 
-Quantum processing units in the paper should be referenced by their unique name (i.e., `ibmq_vigo`) and optionally
-adding the version (i.e., `ibmq_vigo` v1.0.2).  We also encourage referencing the processor.
-For example:
+[Qiskit Transpiler Service](https://github.com/Qiskit/qiskit-ibm-transpiler)
 
-> In this paper we used `ibmq_vigo`, which is one of the IBM Quantum Canary processors.
-
-An example of citing an IBM Quantum program:
-
-> IBM Quantum (2022). Estimator primitive (Version x.y.z) [computer software]. https://<span>quantum.ibm.com</span>/
-</details>
-
-<details>
-  <summary>
-    How do I cite IBM Quantum Composer in my research?
-  </summary>
-
-An example of citing IBM Quantum Composer:
-
-> IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
-</details>
-
-<details>
-  <summary>
-    Why do I receive the error message `AttributeError: QuantumCircuit object has no attribute 'save_state'` when using `save_*`method on a circuit?
-  </summary>
-  
-The `save_*` instructions are part of Qiskit Aer project,
-a high performance simulator for quantum circuits. These instructions do not
-exist outside of Qiskit Aer and are added dynamically to the
-[QuantumCircuit](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) class by Qiskit Aer on import. If you would like to
-use these instructions you must first ensure that you have imported
-`qiskit_aer` in your program before trying to call these methods. You
-can refer to [qiskit_aer.library](https://qiskit.org/ecosystem/aer/apidocs/aer_library.html) for the details of these custom
-instructions included with Qiskit Aer.
-</details>
-
-<details>
-  <summary>
-    Why do my results from real devices differ from my results from the simulator?
-  </summary>
-
-The simulator models an ideal environment, without noise or decoherence. When jobs are run on the real devices, noise from the environment and decoherence cause the qubits to behave differently than in an ideal environment.
-</details>
-
-<details>
-  <summary>
-    How do I delete my account and data?
-  </summary>
-
-To delete your account, go to your [account page](https://quantum.ibm.com/account#delete-account). Scroll to the Delete Account section, and click *Delete your account and account data*. You will receive an email with a link to delete your account.
-</details>
+[Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) - Click on the "Repo" link for a specific package to go to its GitHub repository
