--- a/docs/api/qiskit/qiskit.circuit.library.ZFeatureMap.mdx
+++ b/docs/api/qiskit/qiskit.circuit.library.ZFeatureMap.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.circuit.library.ZFeatureMap
 
 # ZFeatureMap
 
-<Class id="qiskit.circuit.library.ZFeatureMap" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/z_feature_map.py#L21-L104" signature="qiskit.circuit.library.ZFeatureMap(feature_dimension, reps=2, data_map_func=None, parameter_prefix='x', insert_barriers=False, name='ZFeatureMap')" modifiers="class">
+<Class id="qiskit.circuit.library.ZFeatureMap" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/z_feature_map.py#L21-L106" signature="qiskit.circuit.library.ZFeatureMap(feature_dimension, reps=2, data_map_func=None, parameter_prefix='x', insert_barriers=False, name='ZFeatureMap')" modifiers="class">
   Bases: [`PauliFeatureMap`](qiskit.circuit.library.PauliFeatureMap "qiskit.circuit.library.data_preparation.pauli_feature_map.PauliFeatureMap")
 
   The first order Pauli Z-evolution circuit.
@@ -16,13 +16,13 @@ python_api_name: qiskit.circuit.library.ZFeatureMap
   On 3 qubits and with 2 repetitions the circuit is represented by:
 
   ```python
-  ┌───┐┌──────────────┐┌───┐┌──────────────┐
-  ┤ H ├┤ U1(2.0*x[0]) ├┤ H ├┤ U1(2.0*x[0]) ├
-  ├───┤├──────────────┤├───┤├──────────────┤
-  ┤ H ├┤ U1(2.0*x[1]) ├┤ H ├┤ U1(2.0*x[1]) ├
-  ├───┤├──────────────┤├───┤├──────────────┤
-  ┤ H ├┤ U1(2.0*x[2]) ├┤ H ├┤ U1(2.0*x[2]) ├
-  └───┘└──────────────┘└───┘└──────────────┘
+  ┌───┐┌─────────────┐┌───┐┌─────────────┐
+  ┤ H ├┤ P(2.0*x[0]) ├┤ H ├┤ P(2.0*x[0]) ├
+  ├───┤├─────────────┤├───┤├─────────────┤
+  ┤ H ├┤ P(2.0*x[1]) ├┤ H ├┤ P(2.0*x[1]) ├
+  ├───┤├─────────────┤├───┤├─────────────┤
+  ┤ H ├┤ P(2.0*x[2]) ├┤ H ├┤ P(2.0*x[2]) ├
+  └───┘└─────────────┘└───┘└─────────────┘
   ```
 
   This is a sub-class of [`PauliFeatureMap`](qiskit.circuit.library.PauliFeatureMap "qiskit.circuit.library.PauliFeatureMap") where the Pauli strings are fixed as \[‘Z’]. As a result the first order expansion will be a circuit without entangling gates.
@@ -30,40 +30,42 @@ python_api_name: qiskit.circuit.library.ZFeatureMap
   **Examples**
 
   ```python
+  >>> from qiskit.circuit.library import ZFeatureMap
   >>> prep = ZFeatureMap(3, reps=3, insert_barriers=True)
-  >>> print(prep)
-       ┌───┐ ░ ┌──────────────┐ ░ ┌───┐ ░ ┌──────────────┐ ░ ┌───┐ ░ ┌──────────────┐
-  q_0: ┤ H ├─░─┤ U1(2.0*x[0]) ├─░─┤ H ├─░─┤ U1(2.0*x[0]) ├─░─┤ H ├─░─┤ U1(2.0*x[0]) ├
-       ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤
-  q_1: ┤ H ├─░─┤ U1(2.0*x[1]) ├─░─┤ H ├─░─┤ U1(2.0*x[1]) ├─░─┤ H ├─░─┤ U1(2.0*x[1]) ├
-       ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤ ░ ├───┤ ░ ├──────────────┤
-  q_2: ┤ H ├─░─┤ U1(2.0*x[2]) ├─░─┤ H ├─░─┤ U1(2.0*x[2]) ├─░─┤ H ├─░─┤ U1(2.0*x[2]) ├
-       └───┘ ░ └──────────────┘ ░ └───┘ ░ └──────────────┘ ░ └───┘ ░ └──────────────┘
+  >>> print(prep.decompose())
+       ┌───┐ ░ ┌─────────────┐ ░ ┌───┐ ░ ┌─────────────┐ ░ ┌───┐ ░ ┌─────────────┐
+  q_0: ┤ H ├─░─┤ P(2.0*x[0]) ├─░─┤ H ├─░─┤ P(2.0*x[0]) ├─░─┤ H ├─░─┤ P(2.0*x[0]) ├
+       ├───┤ ░ ├─────────────┤ ░ ├───┤ ░ ├─────────────┤ ░ ├───┤ ░ ├─────────────┤
+  q_1: ┤ H ├─░─┤ P(2.0*x[1]) ├─░─┤ H ├─░─┤ P(2.0*x[1]) ├─░─┤ H ├─░─┤ P(2.0*x[1]) ├
+       ├───┤ ░ ├─────────────┤ ░ ├───┤ ░ ├─────────────┤ ░ ├───┤ ░ ├─────────────┤
+  q_2: ┤ H ├─░─┤ P(2.0*x[2]) ├─░─┤ H ├─░─┤ P(2.0*x[2]) ├─░─┤ H ├─░─┤ P(2.0*x[2]) ├
+       └───┘ ░ └─────────────┘ ░ └───┘ ░ └─────────────┘ ░ └───┘ ░ └─────────────┘
   ```
 
   ```python
   >>> data_map = lambda x: x[0]*x[0] + 1  # note: input is an array
   >>> prep = ZFeatureMap(3, reps=1, data_map_func=data_map)
-  >>> print(prep)
-       ┌───┐┌───────────────────────┐
-  q_0: ┤ H ├┤ U1(2.0*x[0]**2 + 2.0) ├
-       ├───┤├───────────────────────┤
-  q_1: ┤ H ├┤ U1(2.0*x[1]**2 + 2.0) ├
-       ├───┤├───────────────────────┤
-  q_2: ┤ H ├┤ U1(2.0*x[2]**2 + 2.0) ├
-       └───┘└───────────────────────┘
+  >>> print(prep.decompose())
+       ┌───┐┌──────────────────────┐
+  q_0: ┤ H ├┤ P(2.0*x[0]**2 + 2.0) ├
+       ├───┤├──────────────────────┤
+  q_1: ┤ H ├┤ P(2.0*x[1]**2 + 2.0) ├
+       ├───┤├──────────────────────┤
+  q_2: ┤ H ├┤ P(2.0*x[2]**2 + 2.0) ├
+       └───┘└──────────────────────┘
   ```
 
   ```python
-  >>> classifier = ZFeatureMap(3, reps=1) + RY(3, reps=1)
-  >>> print(classifier)
-       ┌───┐┌──────────────┐┌──────────┐      ┌──────────┐
-  q_0: ┤ H ├┤ U1(2.0*x[0]) ├┤ RY(θ[0]) ├─■──■─┤ RY(θ[3]) ├────────────
-       ├───┤├──────────────┤├──────────┤ │  │ └──────────┘┌──────────┐
-  q_1: ┤ H ├┤ U1(2.0*x[1]) ├┤ RY(θ[1]) ├─■──┼──────■──────┤ RY(θ[4]) ├
-       ├───┤├──────────────┤├──────────┤    │      │      ├──────────┤
-  q_2: ┤ H ├┤ U1(2.0*x[2]) ├┤ RY(θ[2]) ├────■──────■──────┤ RY(θ[5]) ├
-       └───┘└──────────────┘└──────────┘                  └──────────┘
+  >>> from qiskit.circuit.library import RealAmplitudes
+  >>> classifier = ZFeatureMap(3, reps=1).compose(RealAmplitudes(3, reps=1))
+  >>> print(classifier.decompose())
+       ┌───┐┌─────────────┐┌──────────┐      ┌──────────┐
+  q_0: ┤ H ├┤ P(2.0*x[0]) ├┤ RY(θ[0]) ├─■──■─┤ RY(θ[3]) ├────────────
+       ├───┤├─────────────┤├──────────┤ │  │ └──────────┘┌──────────┐
+  q_1: ┤ H ├┤ P(2.0*x[1]) ├┤ RY(θ[1]) ├─■──┼──────■──────┤ RY(θ[4]) ├
+       ├───┤├─────────────┤├──────────┤    │      │      ├──────────┤
+  q_2: ┤ H ├┤ P(2.0*x[2]) ├┤ RY(θ[2]) ├────■──────■──────┤ RY(θ[5]) ├
+       └───┘└─────────────┘└──────────┘                  └──────────┘
   ```
 
   Create a new first-order Pauli-Z expansion circuit.
@@ -110,7 +112,17 @@ python_api_name: qiskit.circuit.library.ZFeatureMap
 
   ### data
 
-  <Attribute id="qiskit.circuit.library.ZFeatureMap.data" />
+  <Attribute id="qiskit.circuit.library.ZFeatureMap.data">
+    The circuit data (instructions and context).
+
+    **Returns**
+
+    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.
+
+    **Return type**
+
+    QuantumCircuitData
+  </Attribute>
 
   ### entanglement
 
@@ -124,7 +136,13 @@ python_api_name: qiskit.circuit.library.ZFeatureMap
 
   ### entanglement\_blocks
 
-  <Attribute id="qiskit.circuit.library.ZFeatureMap.entanglement_blocks" />
+  <Attribute id="qiskit.circuit.library.ZFeatureMap.entanglement_blocks">
+    The blocks in the entanglement layers.
+
+    **Returns**
+
+    The blocks in the entanglement layers.
+  </Attribute>
 
   ### feature\_dimension
 
@@ -238,7 +256,9 @@ python_api_name: qiskit.circuit.library.ZFeatureMap
 
   ### num\_parameters
 
-  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_parameters" />
+  <Attribute id="qiskit.circuit.library.ZFeatureMap.num_parameters">
+    The number of parameter objects in the circuit.
+  </Attribute>
 
   ### num\_parameters\_settable
 
@@ -318,7 +338,61 @@ python_api_name: qiskit.circuit.library.ZFeatureMap
 
   ### parameters
 
-  <Attribute id="qiskit.circuit.library.ZFeatureMap.parameters" />
+  <Attribute id="qiskit.circuit.library.ZFeatureMap.parameters">
+    The parameters defined in the circuit.
+
+    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.
+
+    **Examples**
+
+    The snippet below shows that insertion order of parameters does not matter.
+
+    ```python
+    >>> from qiskit.circuit import QuantumCircuit, Parameter
+    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
+    >>> circuit = QuantumCircuit(1)
+    >>> circuit.rx(b, 0)
+    >>> circuit.rz(elephant, 0)
+    >>> circuit.ry(a, 0)
+    >>> circuit.parameters  # sorted alphabetically!
+    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
+    ```
+
+    Bear in mind that alphabetical sorting might be unintuitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.
+
+    ```python
+    >>> from qiskit.circuit import QuantumCircuit, Parameter
+    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
+    >>> circuit = QuantumCircuit(1)
+    >>> circuit.u(*angles, 0)
+    >>> circuit.draw()
+       ┌─────────────────────────────┐
+    q: ┤ U(angle_1,angle_2,angle_10) ├
+       └─────────────────────────────┘
+    >>> circuit.parameters
+    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
+    ```
+
+    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.
+
+    ```python
+    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
+    >>> x = ParameterVector("x", 12)
+    >>> circuit = QuantumCircuit(1)
+    >>> for x_i in x:
+    ...     circuit.rx(x_i, 0)
+    >>> circuit.parameters
+    ParameterView([
+        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
+        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
+        ..., ParameterVectorElement(x[11])
+    ])
+    ```
+
+    **Returns**
+
+    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
+  </Attribute>
 
   ### paulis
 
