--- a/docs/api/qiskit/qiskit.circuit.library.ZZFeatureMap.mdx
+++ b/docs/api/qiskit/qiskit.circuit.library.ZZFeatureMap.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.circuit.library.ZZFeatureMap
 
 # ZZFeatureMap
 
-<Class id="qiskit.circuit.library.ZZFeatureMap" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/zz_feature_map.py#L20-L114" signature="qiskit.circuit.library.ZZFeatureMap(feature_dimension, reps=2, entanglement='full', data_map_func=None, parameter_prefix='x', insert_barriers=False, name='ZZFeatureMap')" modifiers="class">
+<Class id="qiskit.circuit.library.ZZFeatureMap" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/zz_feature_map.py#L20-L136" signature="qiskit.circuit.library.ZZFeatureMap(feature_dimension, reps=2, entanglement='full', data_map_func=None, parameter_prefix='x', insert_barriers=False, name='ZZFeatureMap')" modifiers="class">
   Bases: [`PauliFeatureMap`](qiskit.circuit.library.PauliFeatureMap "qiskit.circuit.library.data_preparation.pauli_feature_map.PauliFeatureMap")
 
   Second-order Pauli-Z evolution circuit.
@@ -16,36 +16,48 @@ python_api_name: qiskit.circuit.library.ZZFeatureMap
   For 3 qubits and 1 repetition and linear entanglement the circuit is represented by:
 
   ```python
-  ┌───┐┌─────────────────┐
-  ┤ H ├┤ U1(2.0*φ(x[0])) ├──■────────────────────────────■────────────────────────────────────
-  ├───┤├─────────────────┤┌─┴─┐┌──────────────────────┐┌─┴─┐
-  ┤ H ├┤ U1(2.0*φ(x[1])) ├┤ X ├┤ U1(2.0*φ(x[0],x[1])) ├┤ X ├──■────────────────────────────■──
-  ├───┤├─────────────────┤└───┘└──────────────────────┘└───┘┌─┴─┐┌──────────────────────┐┌─┴─┐
-  ┤ H ├┤ U1(2.0*φ(x[2])) ├──────────────────────────────────┤ X ├┤ U1(2.0*φ(x[1],x[2])) ├┤ X ├
-  └───┘└─────────────────┘                                  └───┘└──────────────────────┘└───┘
+  ┌───┐┌────────────────┐
+  ┤ H ├┤ P(2.0*φ(x[0])) ├──■───────────────────────────■───────────────────────────────────
+  ├───┤├────────────────┤┌─┴─┐┌─────────────────────┐┌─┴─┐
+  ┤ H ├┤ P(2.0*φ(x[1])) ├┤ X ├┤ P(2.0*φ(x[0],x[1])) ├┤ X ├──■───────────────────────────■──
+  ├───┤├────────────────┤└───┘└─────────────────────┘└───┘┌─┴─┐┌─────────────────────┐┌─┴─┐
+  ┤ H ├┤ P(2.0*φ(x[2])) ├─────────────────────────────────┤ X ├┤ P(2.0*φ(x[1],x[2])) ├┤ X ├
+  └───┘└────────────────┘                                 └───┘└─────────────────────┘└───┘
   ```
 
   where $\varphi$ is a classical non-linear function, which defaults to $\varphi(x) = x$ if and $\varphi(x,y) = (\pi - x)(\pi - y)$.
 
-  **Examples**
+  Examples:
 
   ```python
-  >>> from qiskit.circuit.library import ZZFeatureMap
-  >>> prep = ZZFeatureMap(2, reps=1)
-  >>> print(prep)
-       ┌───┐┌──────────────┐
-  q_0: ┤ H ├┤ U1(2.0*x[0]) ├──■───────────────────────────────────────■──
-       ├───┤├──────────────┤┌─┴─┐┌─────────────────────────────────┐┌─┴─┐
-  q_1: ┤ H ├┤ U1(2.0*x[1]) ├┤ X ├┤ U1(2.0*(pi - x[0])*(pi - x[1])) ├┤ X ├
-       └───┘└──────────────┘└───┘└─────────────────────────────────┘└───┘
+  from qiskit.circuit.library import ZZFeatureMap
+  prep = ZZFeatureMap(2, reps=1)
+  print(prep.decompose())
   ```
 
   ```python
-  >>> from qiskit.circuit.library import EfficientSU2
-  >>> classifier = ZZFeatureMap(3) + EfficientSU2(3)
-  >>> classifier.num_parameters
-  15
-  >>> classifier.parameters  # 'x' for the data preparation, 'θ' for the SU2 parameters
+       ┌───┐┌─────────────┐
+  q_0: ┤ H ├┤ P(2.0*x[0]) ├──■──────────────────────────────────────■──
+       ├───┤├─────────────┤┌─┴─┐┌────────────────────────────────┐┌─┴─┐
+  q_1: ┤ H ├┤ P(2.0*x[1]) ├┤ X ├┤ P(2.0*(pi - x[0])*(pi - x[1])) ├┤ X ├
+       └───┘└─────────────┘└───┘└────────────────────────────────┘└───┘
+  ```
+
+  ```python
+  from qiskit.circuit.library import EfficientSU2
+  classifier = ZZFeatureMap(3).compose(EfficientSU2(3))
+  classifier.num_parameters
+  ```
+
+  ```python
+  27
+  ```
+
+  ```python
+  classifier.parameters  # 'x' for the data preparation, 'θ' for the SU2 parameters
+  ```
+
+  ```python
   ParameterView([
       ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
       ParameterVectorElement(x[2]), ParameterVectorElement(θ[0]),
@@ -62,7 +74,13 @@ python_api_name: qiskit.circuit.library.ZZFeatureMap
       ParameterVectorElement(θ[21]), ParameterVectorElement(θ[22]),
       ParameterVectorElement(θ[23])
   ])
-  >>> classifier.count_ops()
+  ```
+
+  ```python
+  classifier.count_ops()
+  ```
+
+  ```python
   OrderedDict([('ZZFeatureMap', 1), ('EfficientSU2', 1)])
   ```
 
@@ -115,7 +133,17 @@ python_api_name: qiskit.circuit.library.ZZFeatureMap
 
   ### data
 
-  <Attribute id="qiskit.circuit.library.ZZFeatureMap.data" />
+  <Attribute id="qiskit.circuit.library.ZZFeatureMap.data">
+    The circuit data (instructions and context).
+
+    **Returns**
+
+    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.
+
+    **Return type**
+
+    QuantumCircuitData
+  </Attribute>
 
   ### entanglement
 
@@ -129,7 +157,13 @@ python_api_name: qiskit.circuit.library.ZZFeatureMap
 
   ### entanglement\_blocks
 
-  <Attribute id="qiskit.circuit.library.ZZFeatureMap.entanglement_blocks" />
+  <Attribute id="qiskit.circuit.library.ZZFeatureMap.entanglement_blocks">
+    The blocks in the entanglement layers.
+
+    **Returns**
+
+    The blocks in the entanglement layers.
+  </Attribute>
 
   ### feature\_dimension
 
@@ -243,7 +277,9 @@ python_api_name: qiskit.circuit.library.ZZFeatureMap
 
   ### num\_parameters
 
-  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_parameters" />
+  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_parameters">
+    The number of parameter objects in the circuit.
+  </Attribute>
 
   ### num\_parameters\_settable
 
@@ -323,7 +359,61 @@ python_api_name: qiskit.circuit.library.ZZFeatureMap
 
   ### parameters
 
-  <Attribute id="qiskit.circuit.library.ZZFeatureMap.parameters" />
+  <Attribute id="qiskit.circuit.library.ZZFeatureMap.parameters">
+    The parameters defined in the circuit.
+
+    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.
+
+    **Examples**
+
+    The snippet below shows that insertion order of parameters does not matter.
+
+    ```python
+    >>> from qiskit.circuit import QuantumCircuit, Parameter
+    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
+    >>> circuit = QuantumCircuit(1)
+    >>> circuit.rx(b, 0)
+    >>> circuit.rz(elephant, 0)
+    >>> circuit.ry(a, 0)
+    >>> circuit.parameters  # sorted alphabetically!
+    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
+    ```
+
+    Bear in mind that alphabetical sorting might be unintuitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.
+
+    ```python
+    >>> from qiskit.circuit import QuantumCircuit, Parameter
+    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
+    >>> circuit = QuantumCircuit(1)
+    >>> circuit.u(*angles, 0)
+    >>> circuit.draw()
+       ┌─────────────────────────────┐
+    q: ┤ U(angle_1,angle_2,angle_10) ├
+       └─────────────────────────────┘
+    >>> circuit.parameters
+    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
+    ```
+
+    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.
+
+    ```python
+    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
+    >>> x = ParameterVector("x", 12)
+    >>> circuit = QuantumCircuit(1)
+    >>> for x_i in x:
+    ...     circuit.rx(x_i, 0)
+    >>> circuit.parameters
+    ParameterView([
+        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
+        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
+        ..., ParameterVectorElement(x[11])
+    ])
+    ```
+
+    **Returns**
+
+    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
+  </Attribute>
 
   ### paulis
 
