Fix misleading comment about IBM Circuit Function

--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -92,7 +92,8 @@
     "pubs = [(circuit, observable)]\n",
     "\n",
     "job = function.run(\n",
-    "  backend_name=backend.name,  # Or `backend=backend_name`, if you didn't initialize a backend object\n",
+    "  # Or `backend_name=backend_name`, if you didn't initialize a backend object\n",
+    "  backend_name=backend.name,\n",
     "  pubs=pubs\n",
     ")"
    ]
