Clarify transpiler service limitations (#2080)
Closes #2034

--- a/docs/guides/qiskit-transpiler-service.mdx
+++ b/docs/guides/qiskit-transpiler-service.mdx
@@ -98,9 +98,9 @@ The following examples demonstrate how to transpile circuits using the Qiskit Tr
 
 Following are the most relevant limitations of the service:
 
-- The Qiskit Transpiler Service can transpile up to 1 million two-qubit gates in either `ai` mode `ai="true"`, `ai="false"`, or `ai="auto"`.
-- The maximum time allowed to run a transpilation process is 30 minutes.
-- You must retrieve the transpilation result from the service within 20 minutes after the transpilation process ends. After 20 minutes, your job is removed.
+- The maximum number of two-qubit gates per circuit in a transpilation job in any `ai` mode is 1 million.
+- The maximum time allowed to run a transpilation process is 30 minutes per job.
+- You must retrieve the transpilation result from the service within 20 minutes after the transpilation process ends. After 20 minutes, the job result is discarded.
 - The maximum time a set of circuits can live in the internal queue while waiting to be transpiled is 120 minutes. After that time, if the job has not been transpiled, it is discarded.
 - The maximum number of qubits has not been determined. The service has been tested on 900+ qubits.
 
