--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -361,7 +361,7 @@
    "id": "40a9f976-fffa-48fb-a81a-26446d5a65a4",
    "metadata": {},
    "source": [
-    "#### How the Estimator calculates the error bar\n",
+    "#### How the Estimator calculates error\n",
     "\n",
     " In addition to the estimate of the mean of the observables passed in the input PUBs (the `evs` field of the `DataBin`), the Estimator also attempts to deliver an estimate of the error associated with those expectation values. All estimator queries will populate the `stds` field with a quantity like the standard error of the mean for each expectation value, but some error mitigation options produce additional information, such as `ensemble_standard_error`.\n",
     "\n",
