--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -367,11 +367,11 @@
     "\n",
     "Consider a single observable $O$. In the absence of ZNE, you can think of each shot of the Estimator execution as providing a point estimate of the expectation value $\\langle O \\rangle$. If the pointwise estimates are in a vector `Os`, then the value returned in `ensemble_standard_error` is equivalent to\n",
     "\n",
-    "$$\\frac{\\textbf{np.std}(\\texttt{Os})}{\\sqrt{\\texttt{shots}}}$$,\n",
+    "$$\\frac{\\textbf{standard deviation}(\\texttt{Os})}{\\sqrt{\\texttt{shots}}}$$,\n",
     "\n",
     "which treats all shots as part of a single ensemble. If you requested gate twirling (`twirling.enable_gates = True`), you can sort the pointwise estimates of $\\langle O \\rangle$ into groups that share a common twirl. Call these grouped estimates `O_twirls`, and there are `num_randomizations` (number of twirls) of them. Then `stds` is the standard error of the mean of `O_twirls`, as in\n",
     "\n",
-    "$$\\frac{\\textbf{np.std}(\\texttt{O_twirls})}{\\sqrt{\\texttt{num_randomizations}}}$$.\n",
+    "$$\\frac{\\textbf{standard deviation}(\\texttt{O_twirls})}{\\sqrt{\\texttt{num_randomizations}}}$$.\n",
     "\n",
     " When you do not enable twirling, `stds` and `ensemble_standard_error` are equal.\n",
     "\n",
