Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -23,12 +23,12 @@
     "\n",
     "As an advantage, TEM leverages informationally complete measurements to give access to a vast set of mitigated expectation values of observables and has optimal sampling overhead on the quantum hardware, as described in Filippov at al. (2023), [arXiv:2307.11740](https://arxiv.org/abs/2307.11740), and  Filippov at al. (2024), [arXiv:2403.13542](https://arxiv.org/abs/2403.13542). The measurement overhead refers to the number of additional measurements required to perform efficient error mitigation, a critical factor in the feasibility of quantum computations. Therefore, TEM has the potential to enable quantum advantage in complex scenarios, such as applications in the fields of quantum chaos, many-body physics, Hubbard dynamics, and small molecule chemistry simulations. \n",
     "\n",
-    "In a nutshell, the main features and benefits of TEM can be sumerized as:\n",
+    "The main features and benefits of TEM can be summarized as:\n",
     "\n",
     "1.  **Optimal measurement overhead**: TEM is optimal with respect to [theoretical bounds](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.210601), meaning that no method can achieve a smaller measurement overhead. In other words, TEM requires the minimum number of additional measurements to perform error mitigation. This in turns means that TEM uses minimal quantum runtime.\n",
-    "2.  **Cost-effectviness**: Since TEM handles noise mitigation entirely in the post-processing stage, there is no need to add extra circuits to the quantum computer, which not only makes the computational cheaper but also dimishes the risk of introducing additional errors due to the imperfections of quantum devices.\n",
+    "2.  **Cost-effectiveness**: Since TEM handles noise mitigation entirely in the post-processing stage, there is no need to add extra circuits to the quantum computer, which not only makes the computational cheaper but also diminishes the risk of introducing additional errors due to the imperfections of quantum devices.\n",
     "3.  **Estimation of multiple observables**: Thanks to informationally-complete measurements, TEM efficiently estimates multiple observables with the same measurement data from the quantum computer.\n",
-    "4.  **Measurement error mitigation**: TEM Qiskit function also includes a proprietary measurement error mitigation method able to significantly reduce readout errors after a short calibration run.\n",
+    "4.  **Measurement error mitigation**: The TEM Qiskit Function also includes a proprietary measurement error mitigation method able to significantly reduce readout errors after a short calibration run.\n",
     "5.  **Accuracy**: TEM significantly improves the accuracy and reliability of digital quantum simulations, making quantum algorithms more precise and dependable.\n"
    ]
   },
@@ -43,7 +43,7 @@
     "\n",
     "![TEM schematics](/images/guides/algorithmiq-tem/tem_scheme.svg \"Error-mitigated estimation of an observable O via post-processing measurement outcomes of the noisy quantum processor. U and N denote an ideal quantum operation and the associated noise map, which can be generally non-local (and extended to grey boxes). D stands for a tensor of operators that are dual to the effects in the IC measurement. The noise mitigation module M is a tensor network that is efficiently contracted from the middle out. The first iteration of the contraction is represented by the dotted purple line, the second one by the dashed line, and the third one by the solid line.\")\n",
     "\n",
-    "Once the circuits are submitted to the function, they are transpiled and optimized to minimize the number of layers with two-qubit gates (the noisier gates on quantum devices). The noise affecting the layers is learned through [Qiskit Runtime](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.noise_learner.NoiseLearner) using a sparse Pauli-Lindblad noise model as described in E. van den Berg, Z. Minev, A. Kandala, K. Temme, Nat. Phys. (2023). [arXiv:2201.09866](https://arxiv.org/abs/2201.09866).\n",
+    "Once the circuits are submitted to the function, they are transpiled and optimized to minimize the number of layers with two-qubit gates (the noisier gates on quantum devices). The noise affecting the layers is learned through [Qiskit Runtime](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.noise_learner.NoiseLearner) using a sparse Pauli-Lindblad noise model as described in E. van den Berg, Z. Minev, A. Kandala, K. Temme, Nat. Phys. (2023). [arXiv:2201.09866](https://arxiv.org/abs/2201.09866).\n",
     "\n",
     "The noise model is an accurate description of the noise on the device able to capture subtle features, including qubit cross-talk. However, noise on the devices can fluctuate and drift and the learned noise might not be accurate at the point in which the estimation is done. This might result in inaccurate results. "
    ]
@@ -133,7 +133,7 @@
    "id": "6e2a97e2",
    "metadata": {},
    "source": [
-    "You can use the familiar Qiskit Serverless APIs to check your Qiskit Function workload's status:"
+    "Use the Qiskit Serverless APIs to check your Qiskit Function workload's status:"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "id": "fbaeace8",
    "metadata": {},
    "source": [
-    "And you can return the results as:"
+    "You can return the results as:"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
     "\n",
     "\n",
-    "<Admonition type=\"caution\"> TEM does not currently support parametrized circuit. The `parameters` argument should be set to `None` if `precision` is specified.</Admonition>"
+    "<Admonition type=\"caution\"> TEM does not currently support parametrized circuits. The `parameters` argument should be set to `None` if `precision` is specified.</Admonition>"
    ]
   },
   {
@@ -223,12 +223,12 @@
    "source": [
     "## Outputs\n",
     "\n",
-    "A Qiskit [PrimitiveResults](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.PrimitiveResult) containing the TEM mitigated result. The result for each PUB is returned as a [PubResult](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.PubResult) containing the following fields:\n",
+    "A Qiskit [PrimitiveResults](/api/qiskit/qiskit.primitives.PrimitiveResult) containing the TEM mitigated result. The result for each PUB is returned as a [PubResult](/api/qiskit/qiskit.primitives.PubResult) containing the following fields:\n",
     " \n",
     "\n",
     "Name |Type | Description\n",
     "-- | -- | --\n",
-    "data | DataBin | A Qiskit [DataBin](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.DataBin) containing the TEM mitigated observable and its standard error. The DataBin has the following fields: <ul><li>`evs`: The TEM mitigated observable value.</li><li>`stds`: The standard error of the TEM mitigated observable.</li></ul>\n",
+    "data | DataBin | A Qiskit [DataBin](/api/qiskit/qiskit.primitives.DataBin) containing the TEM-mitigated observable and its standard error. The DataBin has the following fields: <ul><li>`evs`: The TEM-mitigated observable value.</li><li>`stds`: The standard error of the TEM-mitigated observable.</li></ul>\n",
     "metadadata | dict | A dictionary containing additional results. The dictionary contains the following keys: <ul><li>`\"evs_non_mitigated\"`: The observable value without error mitigation.</li><li>`\"stds_non_mitigated\"`: The standard error of the result without error mitigation.</li><li>`\"evs_mitigated_no_readout_mitigation\"`: The observable value with error mitigation but without readout error mitigation.</li><li>`\"stds_mitigated_no_readout_mitigation\"`: The standard error of the result with error mitigation but without readout error mitigation.</li><li>`\"evs_non_mitigated_with_readout_mitigation\"`: The observable value without error mitigation but with readout error mitigation.</li><li>`\"stds_non_mitigated_with_readout_mitigation\"`: The standard error of the result without error mitigation but with readout error mitigation.</li></ul>"
    ]
   },
@@ -239,7 +239,7 @@
    "source": [
     "## Fetching error messages\n",
     "\n",
-    "If your workload status is ERROR, use job.result() to fetch the error message to fetch the error message as follows:"
+    "If your workload status is ERROR, use job.result() to fetch the error message as follows:"
    ]
   },
   {
