--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -28,7 +28,7 @@
     "1.  **Optimal measurement overhead**: TEM is optimal with respect to [theoretical bounds](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.210601), meaning that no method can achieve a smaller measurement overhead. In other words, TEM requires the minimum number of additional measurements to perform error mitigation. This in turns means that TEM uses minimal quantum runtime.\n",
     "2.  **Cost-effectiveness**: Since TEM handles noise mitigation entirely in the post-processing stage, there is no need to add extra circuits to the quantum computer, which not only makes the computational cheaper but also diminishes the risk of introducing additional errors due to the imperfections of quantum devices.\n",
     "3.  **Estimation of multiple observables**: Thanks to informationally-complete measurements, TEM efficiently estimates multiple observables with the same measurement data from the quantum computer.\n",
-    "4.  **Measurement error mitigation**: The TEM Qiskit Function also includes a proprietary measurement error mitigation method able to significantly reduce readout errors after a short calibration run.\n",
+    "4.  **Measurement error mitigation**: The TEM Qiskit Function also includes a proprietary measurement error mitigation method able to significantly reduce readout errors after a short calibration run [arXiv:2409.02575](https://arxiv.org/abs/2409.02575).\n",
     "5.  **Accuracy**: TEM significantly improves the accuracy and reliability of digital quantum simulations, making quantum algorithms more precise and dependable.\n"
    ]
   },
