fix: restored admonition

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -15,6 +15,10 @@
    "source": [
     "# Tensor-network error mitigation (TEM): A Qiskit Function by Algorithmiq\n",
     "\n",
+    "<Admonition type=\"note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "## Overview\n",
     "\n",
     "Algorithmiq’s Tensor-network Error Mitigation (TEM) method is a hybrid quantum-classical algorithm designed for performing noise mitigation entirely at the classical post-processing stage. With TEM, the user can compute the expectation values of observables mitigating the inevitable noise-induced errors that occur on quantum hardware with increased accuracy and cost efficiency, making it a highly attractive option for quantum researchers and industry practitioners alike. \n",
