--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Authenticate using your [IBM Quantum&trade; Platform API token](http://quantum.ibm.com/), and select the TEM as follows:"
+    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the TEM as follows:"
    ]
   },
   {
